[tool.poetry]
name = "fastapi-w-db"
version = "0.1.0"
description = "Testing FastAPI and MySQL combo"
authors = ["Xiangshi Yin <piupiuyin@gmail.com>"]
license = "apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = "^2.0.35"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
